Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>歐米伽系列規格訓練遊戲（V4 - 全A/B選擇題）</title>
+    <title>歐米伽系列規格訓練遊戲 </title>
     <style>
         body { font-family: Arial, sans-serif; text-align: center; background: #f0f0f0; padding: 10px; }
         #grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px; max-width: 300px; margin: 20px auto; }
@@ -22,7 +22,7 @@
     </style>
 </head>
 <body>
-    <h1>歐米伽系列規格訓練遊戲（V4 - 全A/B選擇題）</h1>
+    <h1>歐米伽系列規格訓練遊戲 </h1>
     <p>點擊九宮格抽題，輸入答案挑戰自己！（一輪9題，總90題隨機抽，只需輸入A或B）</p>
     
     <div id="grid">
@@ -259,3 +259,4 @@
     </script>
 </body>
 </html>
+
